--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1046.0",
     "body-parser": "^1.19.0",
     "child_process": "^1.0.2",
+    "connect": "^3.7.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mqtt": "^4.2.8"
+    "formidable": "^2.0.1",
+    "fs": "^0.0.1-security",
+    "mqtt": "^4.2.8",
+    "multer": "^1.4.4"
   }
 }
