--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect": "^3.7.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.1",
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
     "mqtt": "^4.2.8",
