--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.4",
     "node-json-db": "^1.4.1",
     "passport": "^0.5.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "promise": "^8.1.0",
+    "promises": "^0.2.5"
   }
 }
