Added preview for scheduling

--- a/scripts/s3/config.json
+++ b/scripts/s3/config.json
@@ -1,6 +1,6 @@
 {
-    "accessKeyId":"AKIAQKJYF7FET2P5WULB",
-    "secretAccessKey":"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",
+    "accessKeyId":"AKIAT6CYFI43ONGCSDWR",
+    "secretAccessKey":"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",
     "region":"ap-southeast-1"
 }
 
