--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
+    "mime-types": "^2.1.34",
     "mqtt": "^4.2.8",
     "multer": "^1.4.4",
     "node-json-db": "^1.4.1",
