--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "promise": "^8.1.0",
-    "promises": "^0.2.5"
+    "promises": "^0.2.5",
+    "url": "^0.11.0"
   }
 }
