--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "child_process": "^1.0.2",
     "connect": "^3.7.0",
     "dotenv": "^10.0.0",
+    "doxygen": "^0.4.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
