--- a/scripts/s3/config.json
+++ b/scripts/s3/config.json
@@ -1,6 +1,5 @@
 {
-    "accessKeyId":"AKIAT6CYFI43ONGCSDWR",
-    "secretAccessKey":"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",
+    "accessKeyId":"AKIAT6CYFI43ALJLZ4G2",
+    "secretAccessKey":"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",
     "region":"ap-southeast-1"
 }
-
